--- a/style.css
+++ b/style.css
@@ -2,16 +2,37 @@ body{
   background-color: black
 }
 header{
-  background-color: gray
-}
-nav a{
-  font-size: 40px;
-  position: relative;
-  bottom: 100px;
-  right: 50%;
+  background-color: #0F0F0E
 }
 
-ul{
-  display: inline-flex;
-  margin-left: 50%;
+.titulo{font-size: 100px; color: #C7C7C7; text-align: center;margin-top: -7%}
+
+h1{
+  font-family: inherit; text-align: center; color:white; border: 10px solid #C9460E;
+}
+
+p{
+  font-family: monospace; font-size: 30px; color: white; text-align: center; border: 10px solid #C7B704;
+}
+
+ul {
+  top: 200px;
+font-size: 30px;
+}
+
+.logo{
+width: 15%;
+margin-left: 0%;
+}
+
+.contato{font-family: cursive; background-color: #A89203; color: #FFFFFF ; font-size: 30px; text-align: center;}
+
+iframe{
+  width: 50%;
+  margin-left: 25%;
+}
+
+img{
+  width: 100%;
+  margin-left: 0%;
 }
